k8s_file/test_k8s/ingress-kubia-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: kubia
  namespace: default
  annotations:
    kubernetes.io/ingress.class: nginx-ingress-controller
    nginx.ingress.kubernetes.io/proxy-body-size: 3072m
    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
spec:
  rules:
  - host: kubia.example.com
    http:
      paths: 
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: kubia-nodeport
            port:
              number: 7977
